<resources>
    <string name="app_name">DogList App</string>
    <string name="password">password</string>
    <string name="username">username</string>

    <string name="login">Login</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="my_list_of_items">My List of Dogs</string>
    <string name="add_an_item">Add an Item</string>
    <string name="delete_an_item">Delete an Item</string>

    <string name="nameLabel">Name:</string>
    <string name="name">Rover</string>

    <string name="ageLabel">Age:</string>
    <string name="age">2</string>
    <string name="add_a_dog">Add a Dog</string>
    <string name="breed">Breed:</string>
    <string name="edit_a_dog">Edit a Dog</string>
    <string name="show_details">Show Details</string>
    <string name="list_of_dogs">List of Dogs</string>
    <string name="edit_an_item">Edit an Item</string>
    <string name="golden_retriever">Golden Retriever</string>
    <string name="addSaveButton">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dogbreed">Dogbreed</string>
    <string name="dog_s_name">Dog\'s Name</string>
    <string name="dogname">Name:</string>
    <string name="_12">12</string>
    <string name="dogagelabel">Age:</string>
    <string name="dogphoto" />
    <string name="save">Save</string>
    <string name="edit_cancel">Cancel</string>
    <string name="idlabel">ID:</string>
    <string name="edit">Edit</string>
    <string name="breed2">Breed</string>
    <string name="age2">Age</string>
    <string name="cancel2">Cancel</string>
    <string name="save2">Save</string>
    <string name="name2">Name</string>
    <string name="dialogue_text">Do you want to save these changes?</string>
    <string name="yes">Yes</string>
    <string name="splashscreenactivity">Welcome to the List of Dogs App</string>
    <string name="landingscreenactivity">List of Dogs</string>
    <string name="loginscreenactivity">Login Page</string>
    <string name="back_to_list">Back to List</string>
    <string name="details">Details</string>
    <string name="edit_details">Edit Details</string>
    <string name="photo_of_breed">photo of breed</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_anonymous_sign_in">Anonymous Sign In</string>
    <string name="label_account_linking">Account Linking</string>
    <string name="btn_link_account">Link Account</string>


    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="label_multi_factor">Multi-Factor Authentication</string>
    <string name="desc_multi_factor">Use SMS for two-factor authentication. Note: this feature is only available for Cloud Identity Platform.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="enroll_mfa">Enroll MFA</string>
    <string name="unenroll_mfa">Unenroll MFA</string>
    <string name="reload">Reload</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="multi_factor_signed_out">You are not signed in. To use this sample, first navigate to the Email/Password example to sign in and then return here to enroll in multi-factor auth.</string>

</resources>