<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">


    <TextView
        android:id="@+id/titleAddTextView"
        android:layout_width="147dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        android:text="@string/add_a_dog"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/breedLabelTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/breed"
        android:textAlignment="textEnd"
        android:textColor="#00838F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAddTextView" />

    <TextView
        android:id="@+id/nameLabelTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/nameLabel"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breedLabelTextView" />

    <TextView
        android:id="@+id/ageLabelTextView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ageLabel"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLabelTextView" />

    <EditText
        android:id="@+id/ageTextView"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/age"
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ageLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toEndOf="@+id/ageLabelTextView" />

    <EditText
        android:id="@+id/dogBreedTextView"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/golden_retriever"
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/breedLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toEndOf="@+id/breedLabelTextView" />

    <EditText
        android:id="@+id/nameTextView"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toEndOf="@+id/nameLabelTextView" />

    <ImageButton
        android:id="@+id/addPhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="76dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageLabelTextView"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/dogPhotoImageView"
        android:layout_width="156dp"
        android:layout_height="117dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/dogpaw"
        app:layout_constraintStart_toEndOf="@+id/addPhotoButton"
        app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

    <Button
        android:id="@+id/addSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/addSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toEndOf="@+id/addCancelButton"
        app:layout_constraintTop_toBottomOf="@+id/dogPhotoImageView" />

    <Button
        android:id="@+id/addCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/addSaveButton"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>