<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dogCardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/breedTextView"
        android:layout_width="288dp"
        android:layout_height="28dp"
        android:hint="@string/dogbreed"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="102dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dogphoto"
        app:layout_constraintEnd_toStartOf="@+id/breedTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/dogNameTextView"
        android:layout_width="150dp"
        android:layout_height="23dp"
        android:hint="@string/dog_s_name"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dogNameLabelTextView"
        app:layout_constraintStart_toStartOf="@+id/dogAgeTextView" />

    <TextView
        android:id="@+id/dogNameLabelTextView"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/dogname"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/dogAgeLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/dogAgeLabelTextView" />

    <TextView
        android:id="@+id/dogAgeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/dogagelabel"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/breedTextView" />

    <TextView
        android:id="@+id/dogAgeTextView"
        android:layout_width="73dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:hint="@string/_12"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dogAgeLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/dogAgeLabelTextView" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>