<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFragment">

    <EditText
        android:id="@+id/editIdTextView"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editIdLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/editIdLabelTextView" />

    <TextView
        android:id="@+id/editIdLabelTextView"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/idlabel"
        android:textAlignment="textEnd"
        android:textColor="#00838F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAgeLabelTextView" />

    <TextView
        android:id="@+id/editNameLabelTextView"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/nameLabel"
        android:textAlignment="textEnd"
        android:textColor="#00838F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBreedLabelTextView" />

    <EditText
        android:id="@+id/editNameTextView"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editNameLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/editNameLabelTextView" />


    <TextView
        android:id="@+id/editAgeLabelTextView"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/ageLabel"
        android:textAlignment="textEnd"
        android:textColor="#00838F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameLabelTextView" />

    <EditText
        android:id="@+id/editAgeTextView"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editAgeLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/editAgeLabelTextView" />

    <TextView
        android:id="@+id/editBreedLabelTextView"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/breed"
        android:textAlignment="textEnd"
        android:textColor="#00838F"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editBreedTextView"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editBreedLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/editBreedLabelTextView" />

    <Button
        android:id="@+id/editSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="112dp"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@+id/editCancelButton"
        app:layout_constraintTop_toBottomOf="@+id/editIdTextView" />

    <Button
        android:id="@+id/editCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:text="@string/edit_cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/editSaveButton"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>