<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browser_actions_bg_grey"
    android:orientation="vertical"
    android:weightSum="4">

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="470dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                app:srcCompat="@drawable/poodle" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="400dp"
                android:text="Grumpy Poodle Says You Must Sign In!"
                android:textAlignment="center"
                android:textColor="#FCF9F9"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="@string/signed_out"
            android:textAlignment="center" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="189dp"
            android:layout_height="49dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/fieldEmail"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/emailPasswordFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="fieldEmail, fieldPassword"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/sign_in"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />

        <Button
            android:id="@+id/emailCreateAccountButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/create_account"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldPassword" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/emailPasswordButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="emailCreateAccountButton, emailSignInButton"
            tools:layout_editor_absoluteY="16dp" />


        <Button
            android:id="@+id/verifyEmailButton"
            android:layout_width="61dp"
            android:layout_height="13dp"
            android:text="@string/verify_email"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSignInButton" />

        <Button
            android:id="@+id/reloadButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            app:layout_constraintBottom_toBottomOf="@+id/verifyEmailButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/verifyEmailButton"
            app:layout_constraintTop_toTopOf="@+id/verifyEmailButton" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/signedInButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="signOutButton, verifyEmailButton, reloadButton"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailSignInButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
